--- a/mongodb/compose.yml
+++ b/mongodb/compose.yml
@@ -3,14 +3,14 @@ version: '3.1'
 services:
   mongo:
     image: mongo
-    restart: always
+    # restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
 
   mongo-express:
     image: mongo-express
-    restart: always
+    # restart: always
     ports:
       - 8081:8081
     environment:
